syntax = "proto3";
option go_package = "github.com/rancher/opni/pkg/alerting/v1alpha";

import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/descriptor.proto";
import "google/api/http.proto";
import "google/api/annotations.proto";
import "google/rpc/status.proto";
import "github.com/rancher/opni/pkg/apis/core/v1/core.proto";

service Alerting {
  // ------- Trigger Alerts -------
  // TODO

  // unimplemented
  rpc TriggerAlerts(TriggerAlertsRequest) returns (TriggerAlertsResponse) {
    option (google.api.http) = {
      post: "/alerts/trigger"
      body: "*"
    };
  }

  // ------- CRUD for alerting events log -------

  // alerting internal use only
  rpc CreateAlertLog(core.AlertLog) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/alerts/log"
      body: "*"
    }; 
  }

  
  // unimplemented
  rpc GetAlertLog(core.Reference) returns (core.AlertLog) {
    option (google.api.http) = {
      get: "/alerts/events/{id}"
    };
  }

  rpc ListAlertLogs(ListAlertLogRequest) returns (InformativeAlertLogList) {
    option (google.api.http) = {
      get: "/alerts/events"
    };
  }
  // unimplemented
  rpc UpdateAlertLog(UpdateAlertLogRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/alerts/events"
      body: "*"
    };
  }
  // alerting internal use only (for now)
  rpc DeleteAlertLog(core.Reference) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/alerts/events"
    };
  }

  // -------- CRUD for alerting conditions -------
  //TODO 

  rpc CreateAlertCondition(AlertCondition) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/alerts/conditions"
      body: "*"
    };
  }

  rpc GetAlertCondition(core.Reference) returns (AlertCondition) {
    option (google.api.http) = {
      get: "/alerts/conditions/{id}"
    };
  }

  rpc ListAlertConditions(ListAlertConditionRequest) returns (AlertConditionList) {
    option (google.api.http) = {
      get: "/alerts/conditions"
    };
  }

  rpc UpdateAlertCondition(UpdateAlertConditionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/alerts/conditions"
      body: "*"
    };
  }

  rpc DeleteAlertCondition(core.Reference) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/alerts/conditions"
    };
  }

  rpc PreviewAlertCondition(PreviewAlertConditionRequest) returns (PreviewAlertConditionResponse) {
    option (google.api.http) = {
      post: "/alerts/conditions/preview"
      body: "*"
    };
  }

  // -------- CRUD for alerting endpoints ----
  // TODO 
  
  rpc CreateAlertEndpoint(AlertEndpoint) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/alerts/endpoints"
      body: "*"
    };
  }

  rpc GetAlertEndpoint(core.Reference) returns (AlertEndpoint) {
    option (google.api.http) = {
      get: "/alerts/endpoints/{id}"
    };
  }

  rpc ListAlertEndpoints(ListAlertEndpointsRequest) returns (AlertEndpointList) {
    option (google.api.http) = {
      get: "/alerts/endpoints"
    };
  }

  rpc UpdateAlertEndpoint(UpdateAlertEndpointRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/alerts/endpoints"
      body: "*"
    };
  }

  rpc DeleteAlertEndpoint(core.Reference) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/alerts/endpoints/{id}"
    };
  }

  rpc TestAlertEndpoint(TestAlertEndpointRequest) returns (TestAlertEndpointResponse) {
    option (google.api.http) = {
      post: "/alerts/endpoints/test"
      body: "*"
    };
  }
  
  // takes an endpoint id
  rpc GetImplementationFromEndpoint(core.Reference) returns (EndpointImplementation) {
    option (google.api.http) = {
      post: "/alerts/implementation"
    };
  }

  // alerting internal use only
  rpc CreateEndpointImplementation(CreateImplementation) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/alerts/endpoints/implementation"
      body: "*"
    };
  }

  // alerting internal use only
  rpc UpdateEndpointImplementation(CreateImplementation) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/alerts/endpoints/implementation"
      body: "*"
    };
  }

  // alerting internal use only
  // conditionMustBePassed in here
  rpc DeleteEndpointImplementation(core.Reference) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/alerts/endpoints/implementation"
    };
  }
}

message TriggerAlertsRequest {
  core.Reference id =1;
  // TODO
}

message TriggerAlertsResponse {
  // TODO
}

message ListAlertLogRequest {
  repeated string labels = 1;
  uint64 limit  = 2;
  uint64 startTimestamp  = 3;
  uint64 endTimestamp = 4;
}

message UpdateAlertLogRequest {
  string id = 1;
  core.AlertLog UpdateAlert = 2;
}

enum Severity {
  INFO = 0;
  WARNING = 1;
  ERROR = 2;
  CRITICAL = 3;
}

message AlertCondition {
  string name = 1;
  string description = 2;
  Severity severity = 3;
  oneof alertType {
    AlertConditionSystem system = 4;
  }
  optional string notificationId = 5;
  EndpointImplementation details = 6; 
}

message AlertConditionSystem{}

message AlertConditionList {
  repeated AlertCondition items = 1;
}

message ListAlertConditionRequest {
  // TODO
}

message UpdateAlertConditionRequest {
  core.Reference id = 1;
  AlertCondition UpdateAlert = 2;
}

message PreviewAlertConditionRequest {
  // TODO
}

message PreviewAlertConditionResponse {
  // TODO
}


message EndpointImplementation {
  oneof implementation {
    SlackImplementation slack =1;
    EmailImplementation email =2;
  }
}

message CreateImplementation {
  core.Reference notificationId  = 1;
  core.Reference  conditionId = 2;
  EndpointImplementation implementation = 3;
}

message AlertEndpoint {
   string name = 1;
   string description = 2;
   repeated string labels = 3;
   oneof endpoint {
    SlackEndpoint slack = 4;
    EmailEndpoint email = 5;
   }
}

message SlackEndpoint {
  string name = 1;
  string apiUrl = 2;
  string channel = 3;
}

message SlackImplementation {
  string title = 1;
  string text = 2;
  string footer = 3;
  string imageUrl = 4;
}

message EmailEndpoint {
  string name = 1;
  string to = 2;
  optional string from = 3;
}

message EmailImplementation {
  //TODO
}

message AlertEndpointList {
  repeated AlertEndpoint items = 1;
}

message InformativeAlertLog {
  AlertCondition condition = 1;
  core.AlertLog log = 2;
}

message InformativeAlertLogList {
  repeated InformativeAlertLog items = 1;
}

message ListAlertEndpointsRequest {

}
message UpdateAlertEndpointRequest {
  core.Reference id = 1;
  AlertEndpoint UpdateAlert = 2;
}

message TestAlertEndpointRequest{
  // TODO
}
message TestAlertEndpointResponse {
  // TODO
}